--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Firebase configuration - DO NOT COMMIT TO GIT
+app/google-services.json
+app/google-services.json.local
