--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@
 local.properties
 
 # Firebase configuration - DO NOT COMMIT TO GIT
-app/google-services.json
+app/src/google-services.json
 app/google-services.json.local
